--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://dstroot.github.io/my-hugo-blog"
+baseurl = "http://dstroot.github.io/my-hugo-blog/"
 publishdir = "docs"
 title = "Dan Stroot"
 languageCode = "en-us"
