--- a/config.toml
+++ b/config.toml
@@ -8,3 +8,4 @@ canonifyurls = true
 
 [params]
   themeColor = "theme-base-0d"
+  description = "I love building things. Made in California. Family man, technologist and Hacker News aficionado. Eternally curious."
