--- a/config.toml
+++ b/config.toml
@@ -7,14 +7,14 @@ paginate = 5
 canonifyurls = true
 
 [params]
-  themeColor = "theme-base-0d"
+  # themeColor = "theme-base-0d"
   tagline = "I love building things. Made in California. Family man, technologist and Hacker News aficionado. Eternally curious."
   disqusShortname = "danstroot"
   gravatarHash = "b6e0ed5e10ea91f67808629f4ae109f2"
-  github = "dstroot"
-  linkedin = "danstroot"
-  facebook = "danstroot"
-  twitter = "danstroot"
+  github = "https://github.com/dstroot"
+  linkedin = "https://www.linkedin.com/in/danstroot"
+  facebook = "https://www.facebook.com/dan.stroot"
+  twitter = "https://twitter.com/danstroot"
 
 [author]
   name = "Dan Stroot"
