--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "homepage": "http://danstroot.com/",
   "author": "Dan Stroot",
   "readme": "README.md",
-  "scripts": {
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/dstroot/my_blog"
@@ -23,10 +22,13 @@
   ],
   "devDependencies": {
     "critical": "^0.5.7",
+    "cssnano": "^3.8.0",
+    "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-changed": "^1.3.2",
     "gulp-concat": "^2.6.0",
+    "gulp-concat-css": "^2.3.0",
     "gulp-csscomb": "^3.0.8",
     "gulp-csslint": "^1.0.0",
     "gulp-csso": "^2.0.0",
@@ -39,8 +41,10 @@
     "gulp-less": "^3.1.0",
     "gulp-livereload": "^3.8.1",
     "gulp-load-plugins": "^1.3.0",
+    "gulp-postcss": "^6.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-rimraf": "^0.1.0",
+    "gulp-s3-upload": "^1.6.1",
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^2.2.0",
     "gulp-uglify": "^2.0.0",
@@ -50,8 +54,6 @@
     "psi": "^2.0.4",
     "run-sequence": "^1.2.2",
     "terminus": "^1.1.0",
-    "time-grunt": "^1.4.0",
-    "del": "^2.2.2",
-    "gulp-s3-upload": "^1.6.1"
+    "time-grunt": "^1.4.0"
   }
 }
