--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-rimraf": "^0.1.0",
     "gulp-s3-upload": "^1.6.1",
+    "gulp-sass": "^2.3.2",
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^2.2.0",
     "gulp-uglify": "^2.0.0",
