--- a/config.toml
+++ b/config.toml
@@ -6,11 +6,12 @@ theme = "hugo"
 paginate = 5
 canonifyurls = true
 
-[blackfriday]
-  angledQuotes = false
-  # fractions = false
-  # plainIDAnchors = true
-  extensions = ["laxHtmlBlocks"]
+# [blackfriday]
+#   angledQuotes = false
+#   # fractions = false
+#   # plainIDAnchors = true
+#   smartQuotes = true
+#   extensions = ["laxHtmlBlocks"]
 
 [params]
   googleAnalytics = "UA-44765020"
