--- a/.jshintrc
+++ b/.jshintrc
@@ -10,5 +10,6 @@
   "expr"     : true,
   "laxbreak" : true,
   "quotmark" : "single",
-  "validthis": true
+  "validthis": true,
+  "esnext": true
 }
