--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "jshint-stylish": "^2.2.1",
     "psi": "^2.0.4",
     "run-sequence": "^1.2.2",
+    "sw-precache": "^4.2.3",
     "terminus": "^1.1.0",
     "time-grunt": "^1.4.0"
   }
