--- a/package.json
+++ b/package.json
@@ -14,18 +14,13 @@
     "type": "git",
     "url": "https://github.com/dstroot/my_blog"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "http://choosealicense.com/licenses/mit/"
-    }
-  ],
+  "license": "UNLICENSED",
   "devDependencies": {
+    "autoprefixer": "7.1.5",
     "critical": "^0.5.7",
     "cssnano": "^3.8.0",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.1",
     "gulp-changed": "^1.3.2",
     "gulp-concat": "^2.6.0",
     "gulp-concat-css": "^2.3.0",
@@ -43,8 +38,6 @@
     "gulp-load-plugins": "^1.3.0",
     "gulp-postcss": "^6.2.0",
     "gulp-rename": "^1.2.2",
-    "gulp-rimraf": "^0.1.0",
-    "gulp-s3-upload": "^1.6.1",
     "gulp-sass": "^2.3.2",
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^2.2.0",
@@ -52,10 +45,11 @@
     "gulp-util": "^3.0.7",
     "imagemin-pngcrush": "^5.0.0",
     "jshint-stylish": "^2.2.1",
-    "psi": "^2.0.4",
     "run-sequence": "^1.2.2",
     "sw-precache": "^4.2.3",
-    "terminus": "^1.1.0",
-    "time-grunt": "^1.4.0"
+    "terminus": "^1.1.0"
+  },
+  "dependencies": {
+    "jshint": "^2.9.5"
   }
 }
