--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
   },
   "license": "UNLICENSED",
   "devDependencies": {
-    "autoprefixer": "7.1.5",
+    "autoprefixer": "^7.1.6",
     "critical": "^0.5.7",
     "cssnano": "^3.8.0",
-    "del": "^2.2.2",
+    "del": "3.0.0",
     "gulp": "^3.9.1",
     "gulp-changed": "^1.3.2",
     "gulp-concat": "^2.6.0",
