--- a/config.toml
+++ b/config.toml
@@ -8,6 +8,7 @@ paginate = 5
 canonifyURLs = true
 disqusShortname = "danstroot"
 googleAnalytics = "UA-44765020"
+dataDir = "data"
 
 # [blackfriday]
 #   angledQuotes = false
