--- a/.jshintrc
+++ b/.jshintrc
@@ -1,15 +1,15 @@
 {
-  "asi"      : true,
-  "boss"     : true,
-  "browser"  : true,
-  "curly"    : false,
-  "debug"    : true,
-  "devel"    : true,
-  "eqeqeq"   : false,
-  "eqnull"   : true,
-  "expr"     : true,
-  "laxbreak" : true,
-  "quotmark" : "single",
+  "asi": true,
+  "boss": true,
+  "browser": true,
+  "curly": false,
+  "debug": true,
+  "devel": true,
+  "eqeqeq": false,
+  "eqnull": true,
+  "expr": true,
+  "laxbreak": true,
+  "quotmark": "double",
   "validthis": true,
   "esnext": true
 }
