--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "critical": "^1.3.4",
     "cssnano": "^4.1.4",
     "del": "3.0.0",
+    "fancy-log": "^1.3.2",
     "gulp": "^4.0.0",
     "gulp-changed": "^3.2.0",
     "gulp-concat": "^2.6.0",
@@ -35,10 +36,8 @@
     "gulp-sass": "^4.0.1",
     "gulp-size": "^3.0.0",
     "gulp-sourcemaps": "^2.2.0",
-    "gulp-util": "^3.0.7",
     "imagemin-pngcrush": "^5.0.0",
     "jshint-stylish": "^2.2.1",
-    "run-sequence": "^2.2.1",
     "sw-precache": "^5.2.1",
     "terminus": "^1.1.0"
   },
