--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   "license": "UNLICENSED",
   "devDependencies": {
     "autoprefixer": "^9.1.5",
-    "critical": "^1.3.4",
     "cssnano": "^4.1.4",
     "del": "3.0.0",
     "fancy-log": "^1.3.2",
@@ -25,10 +24,8 @@
     "gulp-changed": "^3.2.0",
     "gulp-concat": "^2.6.0",
     "gulp-header": "^2.0.5",
-    "gulp-htmlhint": "^2.2.1",
     "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^4.1.0",
-    "gulp-jscs": "^4.0.0",
     "gulp-jshint": "^2.0.2",
     "gulp-load-plugins": "^1.3.0",
     "gulp-postcss": "^8.0.0",
@@ -38,8 +35,7 @@
     "gulp-sourcemaps": "^2.2.0",
     "imagemin-pngcrush": "^5.0.0",
     "jshint-stylish": "^2.2.1",
-    "sw-precache": "^5.2.1",
-    "terminus": "^1.1.0"
+    "sw-precache": "^5.2.1"
   },
   "dependencies": {
     "jshint": "^2.9.5"
