--- a/package.json
+++ b/package.json
@@ -18,22 +18,22 @@
   "devDependencies": {
     "autoprefixer": "^9.1.5",
     "cssnano": "^4.1.4",
-    "del": "3.0.0",
+    "del": "^5.0.0",
     "fancy-log": "^1.3.2",
     "gulp": "^4.0.0",
-    "gulp-changed": "^3.2.0",
+    "gulp-changed": "^4.0.0",
     "gulp-concat": "^2.6.0",
     "gulp-header": "^2.0.5",
     "gulp-htmlmin": "^5.0.1",
-    "gulp-imagemin": "^4.1.0",
+    "gulp-imagemin": "^6.0.0",
     "gulp-jshint": "^2.0.2",
-    "gulp-load-plugins": "^1.3.0",
+    "gulp-load-plugins": "^2.0.1",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^4.0.1",
     "gulp-size": "^3.0.0",
     "gulp-sourcemaps": "^2.2.0",
-    "imagemin-pngcrush": "^5.0.0",
+    "imagemin-pngcrush": "^6.0.0",
     "jshint-stylish": "^2.2.1",
     "sw-precache": "^5.2.1"
   },
