--- a/package.json
+++ b/package.json
@@ -1,43 +1,48 @@
 {
-  "name": "myblog",
-  "description": "My Personal Blog",
-  "version": "0.0.1",
-  "keywords": [
-    "Dan Stroot",
-    "blog"
-  ],
-  "homepage": "http://danstroot.com/",
-  "author": "Dan Stroot",
-  "readme": "README.md",
-  "scripts": {},
+  "name": "my-hugo-blog",
+  "version": "1.0.0",
+  "description": "My personal blog",
+  "main": "gulpfile.js",
+  "directories": {
+    "doc": "docs"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/dstroot/my_hugo_blog"
+    "url": "git+https://github.com/dstroot/my-hugo-blog.git"
   },
-  "license": "UNLICENSED",
+  "keywords": [
+    "blog"
+  ],
+  "author": "Dan Stroot",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/dstroot/my-hugo-blog/issues"
+  },
+  "homepage": "https://github.com/dstroot/my-hugo-blog#readme",
   "devDependencies": {
-    "autoprefixer": "^9.1.5",
-    "cssnano": "^4.1.4",
+    "autoprefixer": "^9.6.1",
+    "cssnano": "^4.1.10",
     "del": "^5.0.0",
-    "fancy-log": "^1.3.2",
-    "gulp": "^4.0.0",
+    "fancy-log": "^1.3.3",
+    "gulp": "^4.0.2",
     "gulp-changed": "^4.0.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-header": "^2.0.5",
+    "gulp-concat": "^2.6.1",
+    "gulp-header": "^2.0.9",
     "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^6.0.0",
-    "gulp-jshint": "^2.0.2",
+    "gulp-jshint": "^2.1.0",
     "gulp-load-plugins": "^2.0.1",
     "gulp-postcss": "^8.0.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^4.0.1",
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2",
     "gulp-size": "^3.0.0",
-    "gulp-sourcemaps": "^2.2.0",
+    "gulp-sourcemaps": "^2.6.5",
     "imagemin-pngcrush": "^6.0.0",
+    "jshint": "^2.10.2",
     "jshint-stylish": "^2.2.1",
     "sw-precache": "^5.2.1"
-  },
-  "dependencies": {
-    "jshint": "^2.9.5"
   }
 }
